very working commit

--- a/ui/hostconfig.ui
+++ b/ui/hostconfig.ui
@@ -72,8 +72,8 @@
       <widget class="QLabel" name="userLabel">
        <property name="font">
         <font>
-         <weight>75</weight>
-         <bold>true</bold>
+         <weight>50</weight>
+         <bold>false</bold>
         </font>
        </property>
        <property name="text">
@@ -92,8 +92,8 @@
       <widget class="QLabel" name="passwordLabel">
        <property name="font">
         <font>
-         <weight>75</weight>
-         <bold>true</bold>
+         <weight>50</weight>
+         <bold>false</bold>
         </font>
        </property>
        <property name="text">
